# yt-download-tool

./: .env.example  .pre-commit-config.yaml  pyproject.toml
src/: d_types.py  downloaders.py  enums.py  helpers.py  main.py
src/yt_downloader/: d_types.py  downloaders.py  enums.py  helpers.py
